--- a/Shopping_Cart/shopstyle.css
+++ b/Shopping_Cart/shopstyle.css
@@ -1,6 +1,36 @@
-body, html {
-    
-    background-color: #ff9966;
-    
-    
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../font/fontawesome-webfont.eot');
+  src: url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+     url('../font/fontawesome-webfont.woff') format('woff'),
+     url('../font/fontawesome-webfont.ttf') format('truetype'),
+     url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
+
+
+            body{
+                
+             background-color: bisque;
+             color: black;
+             font-family: monospace;
+             font-size: 1.5em;
+             font: FontAwesome, monospace;
+            }
+            
+            table {
+                
+                background-color: #ff9966;
+                border: solid brown;
+            }
+            
+            th {
+                
+                background-color: crimson;
+                text-transform: uppercase;
+                
+            }
+            
+     
